--- a/Source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
@@ -660,6 +660,11 @@ xcopy "$(TargetDir)*" "$(ProjectDir)..\..\lib\UnitTests" /Y</PostBuildEvent>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
+        <Reference Include="Relativity.ServiceBus.Contracts">
+          <HintPath>..\..\packages\Relativity.ServiceBus\lib\net462\Relativity.ServiceBus.Contracts.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
         <Reference Include="Relativity.ServiceBus.Providers.Configuration">
           <HintPath>..\..\packages\Relativity.ServiceBus\lib\net462\Relativity.ServiceBus.Providers.Configuration.dll</HintPath>
           <Private>True</Private>
@@ -860,11 +865,6 @@ xcopy "$(TargetDir)*" "$(ProjectDir)..\..\lib\UnitTests" /Y</PostBuildEvent>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
       <ItemGroup>
-        <Reference Include="Analytics.Core.Jobs">
-          <HintPath>..\..\packages\RelativityCore\lib\net462\Analytics.Core.Jobs.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
         <Reference Include="Application.Utility">
           <HintPath>..\..\packages\RelativityCore\lib\net462\Application.Utility.dll</HintPath>
           <Private>True</Private>
