--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -8398,6 +8398,11 @@ copy "$(ProjectDir)app.config" "$(ProjectDir)..\..\DevelopmentScripts\Integratio
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
+        <Reference Include="Relativity.ServiceBus.Contracts">
+          <HintPath>..\..\packages\Relativity.ServiceBus\lib\net462\Relativity.ServiceBus.Contracts.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
         <Reference Include="Relativity.ServiceBus.Providers.Configuration">
           <HintPath>..\..\packages\Relativity.ServiceBus\lib\net462\Relativity.ServiceBus.Providers.Configuration.dll</HintPath>
           <Private>True</Private>
@@ -8565,11 +8570,6 @@ copy "$(ProjectDir)app.config" "$(ProjectDir)..\..\DevelopmentScripts\Integratio
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
       <ItemGroup>
-        <Reference Include="Analytics.Core.Jobs">
-          <HintPath>..\..\packages\RelativityCore\lib\net462\Analytics.Core.Jobs.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
         <Reference Include="Application.Utility">
           <HintPath>..\..\packages\RelativityCore\lib\net462\Application.Utility.dll</HintPath>
           <Private>True</Private>
