--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -64,6 +64,7 @@
 		<add key="ui.waitForAjaxCallsInSec" value="3" />
 		<!-- Total time to wait for page to load -->
 		<add key="ui.waitForPageInSec" value="90" />
+		<add key="UI.TimeoutMultiplier" value="1.0"/>
 		<!-- === End of UI tests ========== -->
 
 	</appSettings>
