Fixes for regression.

--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Regression-B.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Regression-B.config
@@ -8,10 +8,8 @@
 		<add key="RelativityInstanceAddress" value="regression-b-services.r1.kcura.com" />		
 		<add key="RelativityWebAddress" value="regression-b.r1.kcura.com" />
 
-		<add key="AdminUsername" value="your.name@relativity.com" />
-		<add key="AdminPassword" value="Test1234!" />
-		<add key="relativityUserName" value="your.name@relativity.com" />
-		<add key="relativityPassword" value="Test1234!" />
+		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
+		<add key="AdminPassword" value="Test123#" />
 
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
@@ -24,9 +22,9 @@
 		<!--  -->
 		<add key="UI.UseTapiForFileCopy" value="true"/>
 		
-		<add key="UI.TemplateWorkspace" value="RelativityOne Quick Start Template"/>
+		<add key="UI.TemplateWorkspace" value="RelativityOne Quick Start Template [DO NOT DELETE]"/>
 
-		<add key="UI.TimeoutMultiplier" value="1.5"/>
+		<add key="UI.TimeoutMultiplier" value="1.9"/>
 		
 	</appSettings>
 </configuration>
