--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-A.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-A.config
@@ -8,10 +8,8 @@
 		<add key="RelativityInstanceAddress" value="reg-a-services.r1.kcura.com" />		
 		<add key="RelativityWebAddress" value="reg-a.r1.kcura.com" />
 
-		<add key="AdminUsername" value="your.name@relativity.com" />
-		<add key="AdminPassword" value="Test1234!" />
-		<add key="relativityUserName" value="your.name@relativity.com" />
-		<add key="relativityPassword" value="Test1234!" />
+		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
+		<add key="AdminPassword" value="Test123#" />
 
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
