--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Zero.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Zero.config
@@ -5,11 +5,11 @@
 	</configSections>
 	<appSettings>
 		<add key="ProtocolVersion" value="https" />
-		<add key="RelativityInstanceAddress" value="reg-prod-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="reg-prod.r1.kcura.com" />
+		<add key="RelativityInstanceAddress" value="reg-zero-services.r1.kcura.com" />		
+		<add key="RelativityWebAddress" value="reg-zero.r1.kcura.com" />
 
-		<add key="AdminUsername" value="your.name@relativity.com" />
-		<add key="AdminPassword" value="Test1234!" />
+		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
+		<add key="AdminPassword" value="Test123#" />
 		
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
