--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/cop001.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/cop001.config
@@ -5,10 +5,13 @@
 	</configSections>
 	<appSettings>
 		<add key="ProtocolVersion" value="https" />
-		<add key="RelativityInstanceAddress" value="il1ddmlpl4wb001.kcura.corp" />
-		<add key="RelativityWebAddress" value="il1ddmlpl4wb001.kcura.corp" />
+		<add key="RelativityInstanceAddress" value="il1ddmlplcop001.kcura.corp" />
+		<add key="RelativityWebAddress" value="il1ddmlplcop001.kcura.corp" />
 
-		<add key="AdminUsername" value="your.name@relativity.com" />
+		<add key="UI.UseTapiForFileCopy" value="false"/>
+		<add key="fileshareLocation" value="\\il1ddmlplcop001\FileShare"/>
+
+		<add key="AdminUsername" value="relativity.admin@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
 
 		<!--
@@ -20,11 +23,13 @@
 		<!--  -->
 		<add key="UI.UseTapiForFileCopy" value="false"/>
 
-		<add key="UI.TemplateWorkspace" value="RelativityOne Quick Start Template"/>
+		<add key="UI.TemplateWorkspace" value="Relativity Starter Template"/>
 
 		<add key="ftpConnectionPath" value="IL1DDMLPL3AG001.kcura.corp" />
 		<add key="ftpUsername" value="ftpuser" />
 		<add key="ftpPassword" value="ftppass" />
+
+		<add key="UI.TimeoutMultiplier" value="1.0"/>
 
 	</appSettings>
 </configuration>
