--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -13,8 +13,8 @@
 		<add key="ServerBindingType" value="https" />
 		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
 
-		<add key="RelativityInstanceAddress" value="localhost" />
-		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001" />
+		<add key="RelativityInstanceAddress" value="p-dv-vm-akrz-1.kcura.corp" />
+		<add key="SQLServerAddress" value="p-dv-vm-akrz-1.kcura.corp\EDDSINSTANCE001" />
 
 		<!-- If empty, application uses the value of RelativityInstanceAddress -->
 		<add key="targetDbHost" value="" />
