Applied SonarQube rule - Fields should be private

--- a/Source/kCura.ScheduleQueue.Core/kCura.ScheduleQueue.Core.csproj
+++ b/Source/kCura.ScheduleQueue.Core/kCura.ScheduleQueue.Core.csproj
@@ -26,6 +26,7 @@
     <Prefer32Bit>false</Prefer32Bit>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\</OutputPath>
