Configurable use of user in UI tests.

--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
@@ -5,14 +5,14 @@
 	</configSections>
 	<appSettings>
 		<add key="ProtocolVersion" value="https" />
-		<add key="RelativityInstanceAddress" value="reg-a-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="reg-a.r1.kcura.com" />
+		<add key="RelativityInstanceAddress" value="reg-prod-update-services.r1.kcura.com" />		
+		<add key="RelativityWebAddress" value="reg-prod-update.r1.kcura.com" />
 
 		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
 		<add key="AdminPassword" value="Test123#" />
 
 		<add key="UI.SkipUserCreation" value="false" />
-
+		
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
 		It won't be deleted after test run.
@@ -20,13 +20,13 @@
 		<add key="UI.UseThisExistingWorkspace" value=""/>
 
 		<add key="UI.SkipDocumentImport" value="false"/>
-
+		
 		<!--  -->
 		<add key="UI.UseTapiForFileCopy" value="true"/>
-
+		
 		<add key="UI.TemplateWorkspace" value="RelativityOne Quick Start Template"/>
 
 		<add key="UI.TimeoutMultiplier" value="1.5"/>
-
+		
 	</appSettings>
 </configuration>
