--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests/kCura.IntegrationPoints.Synchronizers.RDO.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests/kCura.IntegrationPoints.Synchronizers.RDO.Tests.csproj
@@ -109,8 +109,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib\UnitTests"
-xcopy "$(TargetDir)*" "$(ProjectDir)..\..\lib\UnitTests" /Y</PostBuildEvent>
+    <PostBuildEvent></PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\..\.paket\paket.targets" />
   <Choose>
