--- a/Source/kcura.IntegrationPoints.Core.Tests.Integration/kcura.IntegrationPoints.Core.Tests.Integration.csproj
+++ b/Source/kcura.IntegrationPoints.Core.Tests.Integration/kcura.IntegrationPoints.Core.Tests.Integration.csproj
@@ -120,8 +120,7 @@
     </When>
   </Choose>
   <PropertyGroup>
-    <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib\UnitTests"
-xcopy "$(TargetDir)*" "$(ProjectDir)..\..\lib\UnitTests" /Y</PostBuildEvent>
+    <PostBuildEvent></PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\..\.paket\paket.targets" />
   <Choose>
