--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -7748,17 +7748,7 @@
     </When>
   </Choose>
   <PropertyGroup>
-    <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib\UnitTests"
-xcopy "$(TargetDir)*" "$(ProjectDir)..\..\lib\UnitTests" /Y
-xcopy "$(ProjectDir)ExternalDependencies" "$(ProjectDir)..\..\lib\UnitTests\ExternalDependencies" /E /Y /I /R
-xcopy "$(ProjectDir)TestData" "$(ProjectDir)..\..\lib\UnitTests\TestData" /E /Y /I /R
-xcopy "$(ProjectDir)TestDataExtended" "$(ProjectDir)..\..\lib\UnitTests\TestDataExtended" /E /Y /I /R
-xcopy "$(ProjectDir)TestDataSaltPepper" "$(ProjectDir)..\..\lib\UnitTests\TestDataSaltPepper" /E /Y /I /R
-xcopy "$(ProjectDir)TestDataImportFromLoadFile" "$(ProjectDir)..\..\lib\UnitTests\TestDataImportFromLoadFile" /E /Y /I /R
-xcopy "$(ProjectDir)TestDataText" "$(ProjectDir)..\..\lib\UnitTests\TestDataText" /E /Y /I /R
-xcopy "$(ProjectDir)oi\unmanaged" "$(ProjectDir)..\..\lib\UnitTests\oi"  /E /Y /I /R
-copy "$(ProjectDir)app.config" "$(ProjectDir)..\..\DevelopmentScripts\IntegrationPointsTests.config" /Y
-</PostBuildEvent>
+    <PostBuildEvent></PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
